[gd_scene load_steps=21 format=3 uid="uid://difncpec7tmnn"]

[ext_resource type="Script" path="res://scripts/pacman.gd" id="1_tgkds"]
[ext_resource type="Texture2D" uid="uid://bbgj23q7gam4f" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_01.png" id="2_nu26v"]
[ext_resource type="Texture2D" uid="uid://vxf8adm234y3" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_02.png" id="3_eqr8v"]
[ext_resource type="Texture2D" uid="uid://coy4joj7785kn" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_03.png" id="4_y36hj"]
[ext_resource type="Texture2D" uid="uid://dc32pr4l0exr7" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_04.png" id="5_gcwi5"]
[ext_resource type="Texture2D" uid="uid://bghyra350hdga" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_05.png" id="6_ps3a3"]
[ext_resource type="Texture2D" uid="uid://bs55ta550rsj3" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_06.png" id="7_051v1"]
[ext_resource type="Texture2D" uid="uid://c3dh7n3hysm7o" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_07.png" id="8_j5nty"]
[ext_resource type="Texture2D" uid="uid://d30tk7uppyp8r" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_08.png" id="9_h282b"]
[ext_resource type="Texture2D" uid="uid://bm2447s8rp6kl" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_09.png" id="10_k48w1"]
[ext_resource type="Texture2D" uid="uid://malqtxrid8h4" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_10.png" id="11_tn6fp"]
[ext_resource type="Texture2D" uid="uid://2xj6ip5thdc6" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_Death_11.png" id="12_cn16g"]
[ext_resource type="Texture2D" uid="uid://b25vol0yp53n4" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_01.png" id="13_2ca8u"]
[ext_resource type="Texture2D" uid="uid://h71ud3s8c8n3" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_02.png" id="14_k5g3r"]
[ext_resource type="Texture2D" uid="uid://dn5n35q1uw6no" path="res://assets/wojciech-bilicki-Assets/Pacman/Pacman_03.png" id="15_qbrdn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8t3ej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nu26v")
}, {
"duration": 1.0,
"texture": ExtResource("3_eqr8v")
}, {
"duration": 1.0,
"texture": ExtResource("4_y36hj")
}, {
"duration": 1.0,
"texture": ExtResource("5_gcwi5")
}, {
"duration": 1.0,
"texture": ExtResource("6_ps3a3")
}, {
"duration": 1.0,
"texture": ExtResource("7_051v1")
}, {
"duration": 1.0,
"texture": ExtResource("8_j5nty")
}, {
"duration": 1.0,
"texture": ExtResource("9_h282b")
}, {
"duration": 1.0,
"texture": ExtResource("10_k48w1")
}, {
"duration": 1.0,
"texture": ExtResource("11_tn6fp")
}, {
"duration": 1.0,
"texture": ExtResource("12_cn16g")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_2ca8u")
}, {
"duration": 1.0,
"texture": ExtResource("14_k5g3r")
}, {
"duration": 1.0,
"texture": ExtResource("15_qbrdn")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mbp8n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vq6xe"]

[sub_resource type="Animation" id="Animation_gcxpk"]
resource_name = "respawn"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_snmai"]
_data = {
"respawn": SubResource("Animation_gcxpk")
}

[node name="Pacman" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 13
motion_mode = 1
floor_stop_on_slope = false
platform_on_leave = 2
script = ExtResource("1_tgkds")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8t3ej")
frame = 1

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mbp8n")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vq6xe")

[node name="PowerTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_snmai")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_power_timer_timeout"]
